@startuml
' MyPromptHive ERD Diagram - High Contrast Theme
' Optimized for readability (Blue/White)
skinparam backgroundcolor #FFFFFF
skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 300
skinparam defaultFontName "Segoe UI", "Inter", "SansSerif"

skinparam entity {
    BackgroundColor #F2F8FF
    BorderColor #0055BB
    HeaderBackgroundColor #0055BB
    HeaderFontColor #FFFFFF
    FontColor #333333
    AttributeFontColor #444444
    FontSize 12
}

skinparam arrow {
    Color #0055BB
    Thickness 1.5
}
' Generated by plantuml-skill

entity User {
    * id : string [PK]
    --
    * email : string
    * username : string
    * passwordHash : string
    role : string
    language : string
    avatarUrl : string
    resetToken : string
    resetTokenExpires : datetime
    createdAt : datetime
}

entity Settings {
    * id : string [PK]
    --
    * userId : string [FK]
    autoBackupEnabled : boolean
    backupPath : string
    backupFrequency : string
    lastBackupAt : datetime
    showPrompterTips : boolean
    tagColorsEnabled : boolean
    workflowVisible : boolean
}

entity GlobalConfiguration {
    * id : string [PK]
    --
    registrationEnabled : boolean
    privatePromptsEnabled : boolean
}

entity Prompt {
    * id : string [PK]
    --
    * title : string
    description : string
    resource : string
    currentVersionId : string [FK]
    * createdById : string [FK]
    viewCount : int
    copyCount : int
    isLocked : boolean
    isPrivate : boolean
    itemType : string
    repoUrl : string
    url : string
    installCommand : string
    technicalId : string
    createdAt : datetime
    updatedAt : datetime
}

entity PromptVersion {
    * id : string [PK]
    --
    * promptId : string [FK]
    * content : string
    shortContent : string
    usageExample : string
    variableDefinitions : string
    model : string
    resultImage : string
    resultText : string
    versionNumber : int
    changelog : string
    * createdById : string [FK]
    agentUsage : string
    agentSkillIds : string
    createdAt : datetime
}

entity Attachment {
    * id : string [PK]
    --
    * versionId : string [FK]
    * filePath : string
    fileType : string
    originalName : string
    role : string
    createdAt : datetime
}

entity Collection {
    * id : string [PK]
    --
    * title : string
    description : string
    * ownerId : string [FK]
    parentId : string [FK]
    createdAt : datetime
}

entity Tag {
    * id : string [PK]
    --
    * name : string
    color : string
    createdAt : datetime
}

entity Workflow {
    * id : string [PK]
    --
    * title : string
    description : string
    * ownerId : string [FK]
    createdAt : datetime
    updatedAt : datetime
}

entity WorkflowStep {
    * id : string [PK]
    --
    * workflowId : string [FK]
    * promptId : string [FK]
    order : int
    inputMappings : string
}

entity Favorite {
    * userId : string [PK, FK]
    * promptId : string [PK, FK]
    --
    createdAt : datetime
}

entity UserPromptInteraction {
    * id : string [PK]
    --
    * userId : string [FK]
    * promptId : string [FK]
    type : string
    updatedAt : datetime
}

User ||--o{ Prompt
User ||--o{ Collection
User ||--o| Settings
User ||--o{ Workflow
User ||--o{ Favorite
User ||--o{ UserPromptInteraction

Prompt ||--|{ PromptVersion
Prompt }|--|{ Collection
Prompt }|--|{ Tag
Prompt ||--o{ WorkflowStep
Prompt ||--o{ Favorite
Prompt ||--o{ UserPromptInteraction

PromptVersion ||--o{ Attachment
Collection ||--o{ Collection

@enduml
